feat: prepare project for GitHub publication
- Add comprehensive README.md with project overview, features, and setup instructions
- Add MIT LICENSE file
- Add CONTRIBUTING.md with contribution guidelines
- Update .gitignore to exclude project report PDF
- Include presentation slides and documentation images
- Add badges and professional formatting for GitHub

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ engine/layoutgen/agent/figures
 # API Keys
 **/apiKeys.js
 
+# Project Documentation (exclude report, keep slides)
+CSE_252D_Project_report.pdf
+
 # Logs
 /log
 /logs/
